DbShell.FilterParser.Antlr/antlr/NumberFilterParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 NumberFilter.g 2016-09-07 21:54:31

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


  using DbShell.Driver.Common.DmlFramework;
using System.Globalization;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

public partial class NumberFilterParser : DbShellFilterAntlrParser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"MINUS", 
		"NUMBER", 
		"Q_STRING", 
		"A_STRING", 
		"SQL_LITERAL", 
		"DOT", 
		"SQL_VARIABLE", 
		"LT", 
		"GT", 
		"LE", 
		"GE", 
		"NE", 
		"EQ", 
		"T_NULL", 
		"T_NOT", 
		"EQ2", 
		"NE2", 
		"COMMA", 
		"ENDLINE", 
		"N", 
		"U", 
		"L", 
		"O", 
		"T", 
		"DIGIT", 
		"WHITESPACE", 
		"A", 
		"B", 
		"C", 
		"D", 
		"E", 
		"F", 
		"G", 
		"H", 
		"I", 
		"J", 
		"K", 
		"M", 
		"P", 
		"Q", 
		"R", 
		"S", 
		"V", 
		"W", 
		"X", 
		"Y", 
		"Z"
    };

    public const int LT = 11;
    public const int EOF = -1;
    public const int Q_STRING = 6;
    public const int COMMA = 21;
    public const int T_NULL = 17;
    public const int DIGIT = 28;
    public const int EQ = 16;
    public const int DOT = 9;
    public const int NE = 15;
    public const int D = 33;
    public const int E = 34;
    public const int GE = 14;
    public const int F = 35;
    public const int G = 36;
    public const int SQL_VARIABLE = 10;
    public const int A = 30;
    public const int B = 31;
    public const int NE2 = 20;
    public const int C = 32;
    public const int L = 25;
    public const int M = 41;
    public const int N = 23;
    public const int O = 26;
    public const int H = 37;
    public const int I = 38;
    public const int J = 39;
    public const int NUMBER = 5;
    public const int K = 40;
    public const int U = 24;
    public const int T = 27;
    public const int W = 47;
    public const int WHITESPACE = 29;
    public const int V = 46;
    public const int Q = 43;
    public const int P = 42;
    public const int S = 45;
    public const int R = 44;
    public const int MINUS = 4;
    public const int Y = 49;
    public const int X = 48;
    public const int SQL_LITERAL = 8;
    public const int EQ2 = 19;
    public const int Z = 50;
    public const int A_STRING = 7;
    public const int GT = 12;
    public const int ENDLINE = 22;
    public const int T_NOT = 18;
    public const int LE = 13;

    // delegates
    // delegators



        public NumberFilterParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public NumberFilterParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return NumberFilterParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "NumberFilter.g"; }
    }


    public class negative_number_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "negative_number"
    // NumberFilter.g:14:1: negative_number : MINUS num1= NUMBER ;
    public NumberFilterParser.negative_number_return negative_number() // throws RecognitionException [1]
    {   
        NumberFilterParser.negative_number_return retval = new NumberFilterParser.negative_number_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken num1 = null;
        IToken MINUS1 = null;

        object num1_tree=null;
        object MINUS1_tree=null;

        try 
    	{
            // NumberFilter.g:14:16: ( MINUS num1= NUMBER )
            // NumberFilter.g:15:3: MINUS num1= NUMBER
            {
            	root_0 = (object)adaptor.GetNilNode();

            	MINUS1=(IToken)Match(input,MINUS,FOLLOW_MINUS_in_negative_number43); 
            		MINUS1_tree = (object)adaptor.Create(MINUS1);
            		adaptor.AddChild(root_0, MINUS1_tree);

            	num1=(IToken)Match(input,NUMBER,FOLLOW_NUMBER_in_negative_number47); 
            		num1_tree = (object)adaptor.Create(num1);
            		adaptor.AddChild(root_0, num1_tree);

            	 Push(-Decimal.Parse(((num1 != null) ? num1.Text : null), CultureInfo.InvariantCulture)); 

            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "negative_number"

    public class positive_number_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "positive_number"
    // NumberFilter.g:17:1: positive_number : num1= NUMBER ;
    public NumberFilterParser.positive_number_return positive_number() // throws RecognitionException [1]
    {   
        NumberFilterParser.positive_number_return retval = new NumberFilterParser.positive_number_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken num1 = null;

        object num1_tree=null;

        try 
    	{
            // NumberFilter.g:17:16: (num1= NUMBER )
            // NumberFilter.g:18:3: num1= NUMBER
            {
            	root_0 = (object)adaptor.GetNilNode();

            	num1=(IToken)Match(input,NUMBER,FOLLOW_NUMBER_in_positive_number63); 
            		num1_tree = (object)adaptor.Create(num1);
            		adaptor.AddChild(root_0, num1_tree);

            	 Push(Decimal.Parse(((num1 != null) ? num1.Text : null), CultureInfo.InvariantCulture)); 

            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "positive_number"

    public class number_as_string_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "number_as_string"
    // NumberFilter.g:20:1: number_as_string : (num1= Q_STRING | num1= A_STRING ) ;
    public NumberFilterParser.number_as_string_return number_as_string() // throws RecognitionException [1]
    {   
        NumberFilterParser.number_as_string_return retval = new NumberFilterParser.number_as_string_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken num1 = null;

        object num1_tree=null;

        try 
    	{
            // NumberFilter.g:20:17: ( (num1= Q_STRING | num1= A_STRING ) )
            // NumberFilter.g:21:3: (num1= Q_STRING | num1= A_STRING )
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// NumberFilter.g:21:3: (num1= Q_STRING | num1= A_STRING )
            	int alt1 = 2;
            	int LA1_0 = input.LA(1);

            	if ( (LA1_0 == Q_STRING) )
            	{
            	    alt1 = 1;
            	}
            	else if ( (LA1_0 == A_STRING) )
            	{
            	    alt1 = 2;
            	}
            	else 
            	{
            	    NoViableAltException nvae_d1s0 =
            	        new NoViableAltException("", 1, 0, input);

            	    throw nvae_d1s0;
            	}
            	switch (alt1) 
            	{
            	    case 1 :
            	        // NumberFilter.g:21:4: num1= Q_STRING
            	        {
            	        	num1=(IToken)Match(input,Q_STRING,FOLLOW_Q_STRING_in_number_as_string81); 
            	        		num1_tree = (object)adaptor.Create(num1);
            	        		adaptor.AddChild(root_0, num1_tree);


            	        }
            	        break;
            	    case 2 :
            	        // NumberFilter.g:21:20: num1= A_STRING
            	        {
            	        	num1=(IToken)Match(input,A_STRING,FOLLOW_A_STRING_in_number_as_string87); 
            	        		num1_tree = (object)adaptor.Create(num1);
            	        		adaptor.AddChild(root_0, num1_tree);


            	        }
            	        break;

            	}

            	 string value=((num1 != null) ? num1.Text : null); Push(Decimal.Parse(value.Substring(1, value.Length - 2), CultureInfo.InvariantCulture)); 

            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "number_as_string"

    public class number_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "number"
    // NumberFilter.g:23:1: number : ( positive_number | negative_number | number_as_string );
    public NumberFilterParser.number_return number() // throws RecognitionException [1]
    {   
        NumberFilterParser.number_return retval = new NumberFilterParser.number_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        NumberFilterParser.positive_number_return positive_number2 = default(NumberFilterParser.positive_number_return);

        NumberFilterParser.negative_number_return negative_number3 = default(NumberFilterParser.negative_number_return);

        NumberFilterParser.number_as_string_return number_as_string4 = default(NumberFilterParser.number_as_string_return);



        try 
    	{
            // NumberFilter.g:23:7: ( positive_number | negative_number | number_as_string )
            int alt2 = 3;
            switch ( input.LA(1) ) 
            {
            case NUMBER:
            	{
                alt2 = 1;
                }
                break;
            case MINUS:
            	{
                alt2 = 2;
                }
                break;
            case Q_STRING:
            case A_STRING:
            	{
                alt2 = 3;
                }
                break;
            	default:
            	    NoViableAltException nvae_d2s0 =
            	        new NoViableAltException("", 2, 0, input);

            	    throw nvae_d2s0;
            }

            switch (alt2) 
            {
                case 1 :
                    // NumberFilter.g:24:3: positive_number
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_positive_number_in_number101);
                    	positive_number2 = positive_number();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, positive_number2.Tree);

                    }
                    break;
                case 2 :
                    // NumberFilter.g:24:21: negative_number
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_negative_number_in_number105);
                    	negative_number3 = negative_number();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, negative_number3.Tree);

                    }
                    break;
                case 3 :
                    // NumberFilter.g:24:39: number_as_string
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_number_as_string_in_number109);
                    	number_as_string4 = number_as_string();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, number_as_string4.Tree);

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "number"

    public class interval_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "interval"
    // NumberFilter.g:26:1: interval : ( number MINUS num2= NUMBER | ( number MINUS num2= Q_STRING | number MINUS num2= A_STRING ) );
    public NumberFilterParser.interval_return interval() // throws RecognitionException [1]
    {   
        NumberFilterParser.interval_return retval = new NumberFilterParser.interval_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken num2 = null;
        IToken MINUS6 = null;
        IToken MINUS8 = null;
        IToken MINUS10 = null;
        NumberFilterParser.number_return number5 = default(NumberFilterParser.number_return);

        NumberFilterParser.number_return number7 = default(NumberFilterParser.number_return);

        NumberFilterParser.number_return number9 = default(NumberFilterParser.number_return);


        object num2_tree=null;
        object MINUS6_tree=null;
        object MINUS8_tree=null;
        object MINUS10_tree=null;

        try 
    	{
            // NumberFilter.g:26:10: ( number MINUS num2= NUMBER | ( number MINUS num2= Q_STRING | number MINUS num2= A_STRING ) )
            int alt4 = 2;
            switch ( input.LA(1) ) 
            {
            case NUMBER:
            	{
                int LA4_1 = input.LA(2);

                if ( (LA4_1 == MINUS) )
                {
                    int LA4_5 = input.LA(3);

                    if ( (LA4_5 == NUMBER) )
                    {
                        alt4 = 1;
                    }
                    else if ( ((LA4_5 >= Q_STRING && LA4_5 <= A_STRING)) )
                    {
                        alt4 = 2;
                    }
                    else 
                    {
                        NoViableAltException nvae_d4s5 =
                            new NoViableAltException("", 4, 5, input);

                        throw nvae_d4s5;
                    }
                }
                else 
                {
                    NoViableAltException nvae_d4s1 =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae_d4s1;
                }
                }
                break;
            case MINUS:
            	{
                int LA4_2 = input.LA(2);

                if ( (LA4_2 == NUMBER) )
                {
                    int LA4_6 = input.LA(3);

                    if ( (LA4_6 == MINUS) )
                    {
                        int LA4_5 = input.LA(4);

                        if ( (LA4_5 == NUMBER) )
                        {
                            alt4 = 1;
                        }
                        else if ( ((LA4_5 >= Q_STRING && LA4_5 <= A_STRING)) )
                        {
                            alt4 = 2;
                        }
                        else 
                        {
                            NoViableAltException nvae_d4s5 =
                                new NoViableAltException("", 4, 5, input);

                            throw nvae_d4s5;
                        }
                    }
                    else 
                    {
                        NoViableAltException nvae_d4s6 =
                            new NoViableAltException("", 4, 6, input);

                        throw nvae_d4s6;
                    }
                }
                else 
                {
                    NoViableAltException nvae_d4s2 =
                        new NoViableAltException("", 4, 2, input);

                    throw nvae_d4s2;
                }
                }
                break;
            case Q_STRING:
            	{
                int LA4_3 = input.LA(2);

                if ( (LA4_3 == MINUS) )
                {
                    int LA4_5 = input.LA(3);

                    if ( (LA4_5 == NUMBER) )
                    {
                        alt4 = 1;
                    }
                    else if ( ((LA4_5 >= Q_STRING && LA4_5 <= A_STRING)) )
                    {
                        alt4 = 2;
                    }
                    else 
                    {
                        NoViableAltException nvae_d4s5 =
                            new NoViableAltException("", 4, 5, input);

                        throw nvae_d4s5;
                    }
                }
                else 
                {
                    NoViableAltException nvae_d4s3 =
                        new NoViableAltException("", 4, 3, input);

                    throw nvae_d4s3;
                }
                }
                break;
            case A_STRING:
            	{
                int LA4_4 = input.LA(2);

                if ( (LA4_4 == MINUS) )
                {
                    int LA4_5 = input.LA(3);

                    if ( (LA4_5 == NUMBER) )
                    {
                        alt4 = 1;
                    }
                    else if ( ((LA4_5 >= Q_STRING && LA4_5 <= A_STRING)) )
                    {
                        alt4 = 2;
                    }
                    else 
                    {
                        NoViableAltException nvae_d4s5 =
                            new NoViableAltException("", 4, 5, input);

                        throw nvae_d4s5;
                    }
                }
                else 
                {
                    NoViableAltException nvae_d4s4 =
                        new NoViableAltException("", 4, 4, input);

                    throw nvae_d4s4;
                }
                }
                break;
            	default:
            	    NoViableAltException nvae_d4s0 =
            	        new NoViableAltException("", 4, 0, input);

            	    throw nvae_d4s0;
            }

            switch (alt4) 
            {
                case 1 :
                    // NumberFilter.g:27:1: number MINUS num2= NUMBER
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_number_in_interval118);
                    	number5 = number();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, number5.Tree);
                    	MINUS6=(IToken)Match(input,MINUS,FOLLOW_MINUS_in_interval120); 
                    		MINUS6_tree = (object)adaptor.Create(MINUS6);
                    		adaptor.AddChild(root_0, MINUS6_tree);

                    	num2=(IToken)Match(input,NUMBER,FOLLOW_NUMBER_in_interval124); 
                    		num2_tree = (object)adaptor.Create(num2);
                    		adaptor.AddChild(root_0, num2_tree);


                    	        var left = Pop<decimal>();var right=Decimal.Parse(((num2 != null) ? num2.Text : null), CultureInfo.InvariantCulture);
                    	        Conditions.Add(new DmlfBetweenCondition
                    	            {
                    	                Expr = ColumnValue,
                    	                LowerBound = new DmlfLiteralExpression{Value = left},
                    	                UpperBound = new DmlfLiteralExpression{Value = right},
                    	            });


                    }
                    break;
                case 2 :
                    // NumberFilter.g:36:1: ( number MINUS num2= Q_STRING | number MINUS num2= A_STRING )
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	// NumberFilter.g:36:1: ( number MINUS num2= Q_STRING | number MINUS num2= A_STRING )
                    	int alt3 = 2;
                    	switch ( input.LA(1) ) 
                    	{
                    	case NUMBER:
                    		{
                    	    int LA3_1 = input.LA(2);

                    	    if ( (LA3_1 == MINUS) )
                    	    {
                    	        int LA3_5 = input.LA(3);

                    	        if ( (LA3_5 == A_STRING) )
                    	        {
                    	            alt3 = 2;
                    	        }
                    	        else if ( (LA3_5 == Q_STRING) )
                    	        {
                    	            alt3 = 1;
                    	        }
                    	        else 
                    	        {
                    	            NoViableAltException nvae_d3s5 =
                    	                new NoViableAltException("", 3, 5, input);

                    	            throw nvae_d3s5;
                    	        }
                    	    }
                    	    else 
                    	    {
                    	        NoViableAltException nvae_d3s1 =
                    	            new NoViableAltException("", 3, 1, input);

                    	        throw nvae_d3s1;
                    	    }
                    	    }
                    	    break;
                    	case MINUS:
                    		{
                    	    int LA3_2 = input.LA(2);

                    	    if ( (LA3_2 == NUMBER) )
                    	    {
                    	        int LA3_6 = input.LA(3);

                    	        if ( (LA3_6 == MINUS) )
                    	        {
                    	            int LA3_5 = input.LA(4);

                    	            if ( (LA3_5 == A_STRING) )
                    	            {
                    	                alt3 = 2;
                    	            }
                    	            else if ( (LA3_5 == Q_STRING) )
                    	            {
                    	                alt3 = 1;
                    	            }
                    	            else 
                    	            {
                    	                NoViableAltException nvae_d3s5 =
                    	                    new NoViableAltException("", 3, 5, input);

                    	                throw nvae_d3s5;
                    	            }
                    	        }
                    	        else 
                    	        {
                    	            NoViableAltException nvae_d3s6 =
                    	                new NoViableAltException("", 3, 6, input);

                    	            throw nvae_d3s6;
                    	        }
                    	    }
                    	    else 
                    	    {
                    	        NoViableAltException nvae_d3s2 =
                    	            new NoViableAltException("", 3, 2, input);

                    	        throw nvae_d3s2;
                    	    }
                    	    }
                    	    break;
                    	case Q_STRING:
                    		{
                    	    int LA3_3 = input.LA(2);

                    	    if ( (LA3_3 == MINUS) )
                    	    {
                    	        int LA3_5 = input.LA(3);

                    	        if ( (LA3_5 == A_STRING) )
                    	        {
                    	            alt3 = 2;
                    	        }
                    	        else if ( (LA3_5 == Q_STRING) )
                    	        {
                    	            alt3 = 1;
                    	        }
                    	        else 
                    	        {
                    	            NoViableAltException nvae_d3s5 =
                    	                new NoViableAltException("", 3, 5, input);

                    	            throw nvae_d3s5;
                    	        }
                    	    }
                    	    else 
                    	    {
                    	        NoViableAltException nvae_d3s3 =
                    	            new NoViableAltException("", 3, 3, input);

                    	        throw nvae_d3s3;
                    	    }
                    	    }
                    	    break;
                    	case A_STRING:
                    		{
                    	    int LA3_4 = input.LA(2);

                    	    if ( (LA3_4 == MINUS) )
                    	    {
                    	        int LA3_5 = input.LA(3);

                    	        if ( (LA3_5 == A_STRING) )
                    	        {
                    	            alt3 = 2;
                    	        }
                    	        else if ( (LA3_5 == Q_STRING) )
                    	        {
                    	            alt3 = 1;
                    	        }
                    	        else 
                    	        {
                    	            NoViableAltException nvae_d3s5 =
                    	                new NoViableAltException("", 3, 5, input);

                    	            throw nvae_d3s5;
                    	        }
                    	    }
                    	    else 
                    	    {
                    	        NoViableAltException nvae_d3s4 =
                    	            new NoViableAltException("", 3, 4, input);

                    	        throw nvae_d3s4;
                    	    }
                    	    }
                    	    break;
                    		default:
                    		    NoViableAltException nvae_d3s0 =
                    		        new NoViableAltException("", 3, 0, input);

                    		    throw nvae_d3s0;
                    	}

                    	switch (alt3) 
                    	{
                    	    case 1 :
                    	        // NumberFilter.g:36:2: number MINUS num2= Q_STRING
                    	        {
                    	        	PushFollow(FOLLOW_number_in_interval131);
                    	        	number7 = number();
                    	        	state.followingStackPointer--;

                    	        	adaptor.AddChild(root_0, number7.Tree);
                    	        	MINUS8=(IToken)Match(input,MINUS,FOLLOW_MINUS_in_interval133); 
                    	        		MINUS8_tree = (object)adaptor.Create(MINUS8);
                    	        		adaptor.AddChild(root_0, MINUS8_tree);

                    	        	num2=(IToken)Match(input,Q_STRING,FOLLOW_Q_STRING_in_interval137); 
                    	        		num2_tree = (object)adaptor.Create(num2);
                    	        		adaptor.AddChild(root_0, num2_tree);


                    	        }
                    	        break;
                    	    case 2 :
                    	        // NumberFilter.g:36:31: number MINUS num2= A_STRING
                    	        {
                    	        	PushFollow(FOLLOW_number_in_interval141);
                    	        	number9 = number();
                    	        	state.followingStackPointer--;

                    	        	adaptor.AddChild(root_0, number9.Tree);
                    	        	MINUS10=(IToken)Match(input,MINUS,FOLLOW_MINUS_in_interval143); 
                    	        		MINUS10_tree = (object)adaptor.Create(MINUS10);
                    	        		adaptor.AddChild(root_0, MINUS10_tree);

                    	        	num2=(IToken)Match(input,A_STRING,FOLLOW_A_STRING_in_interval147); 
                    	        		num2_tree = (object)adaptor.Create(num2);
                    	        		adaptor.AddChild(root_0, num2_tree);


                    	        }
                    	        break;

                    	}


                    	        var left = Pop<decimal>();
                    	        string value=((num2 != null) ? num2.Text : null); 
                    	        var right=Decimal.Parse(value.Substring(1, value.Length - 2), CultureInfo.InvariantCulture);
                    	        Conditions.Add(new DmlfBetweenCondition
                    	            {
                    	                Expr = ColumnValue,
                    	                LowerBound = new DmlfLiteralExpression{Value = left},
                    	                UpperBound = new DmlfLiteralExpression{Value = right},
                    	            });


                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "interval"

    public class sql_identifier_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "sql_identifier"
    // NumberFilter.g:48:1: sql_identifier : lit1= SQL_LITERAL ( DOT lit2= SQL_LITERAL )* ;
    public NumberFilterParser.sql_identifier_return sql_identifier() // throws RecognitionException [1]
    {   
        NumberFilterParser.sql_identifier_return retval = new NumberFilterParser.sql_identifier_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken lit1 = null;
        IToken lit2 = null;
        IToken DOT11 = null;

        object lit1_tree=null;
        object lit2_tree=null;
        object DOT11_tree=null;

        try 
    	{
            // NumberFilter.g:48:15: (lit1= SQL_LITERAL ( DOT lit2= SQL_LITERAL )* )
            // NumberFilter.g:49:3: lit1= SQL_LITERAL ( DOT lit2= SQL_LITERAL )*
            {
            	root_0 = (object)adaptor.GetNilNode();

            	lit1=(IToken)Match(input,SQL_LITERAL,FOLLOW_SQL_LITERAL_in_sql_identifier161); 
            		lit1_tree = (object)adaptor.Create(lit1);
            		adaptor.AddChild(root_0, lit1_tree);

            	 Push(((lit1 != null) ? lit1.Text : null)); 
            	// NumberFilter.g:50:3: ( DOT lit2= SQL_LITERAL )*
            	do 
            	{
            	    int alt5 = 2;
            	    int LA5_0 = input.LA(1);

            	    if ( (LA5_0 == DOT) )
            	    {
            	        alt5 = 1;
            	    }


            	    switch (alt5) 
            		{
            			case 1 :
            			    // NumberFilter.g:50:4: DOT lit2= SQL_LITERAL
            			    {
            			    	DOT11=(IToken)Match(input,DOT,FOLLOW_DOT_in_sql_identifier168); 
            			    		DOT11_tree = (object)adaptor.Create(DOT11);
            			    		adaptor.AddChild(root_0, DOT11_tree);
